# light-letter

./: .gitignore  Cargo.toml  README.md  build-wasm-debug.sh  build-wasm-release.sh  build-web-wasm.sh  init-web-wasm.sh
examples/basic/: config.toml  main.rs
light-letter/: Cargo.toml  README.md
light-letter-backstage/: .gitignore  Cargo.toml  README.md
light-letter-backstage/src/: lib.rs
light-letter-backstage/src/backstage/: home.rs  login.rs  mod.rs  style.skin
light-letter-backstage/src/components/: button.rs  hint.rs  input.rs  skin.rs
light-letter-backstage/src/i18n/: en_us.rs  mod.rs
light-letter-i18n/: Cargo.toml  README.md
light-letter-i18n/src/: lib.rs
light-letter-rpc/: .env  Cargo.toml  README.md
light-letter-rpc/migrations/2020-03-15-153323_user/: down.sql  up.sql
light-letter-rpc/migrations/2020-08-01-064510_config/: up.sql
light-letter-rpc/src/: config.rs  lib.rs  models.rs  schema.rs  session.rs  site_state.rs  sites_config.rs
light-letter-rpc/src/backstage/: login.rs  post.rs
light-letter-rpc/src/db/: mod.rs
light-letter-theme-ivy-leaf/: Cargo.toml  README.md  package.json
light-letter-theme-ivy-leaf/js-build/: index.js  webpack.config.js
light-letter-theme-ivy-leaf/src/: lib.rs  not_found.rs
light-letter-theme-ivy-leaf/src/pages/: index.rs
light-letter-web/: .gitignore  Cargo.toml  README.md  package.json
light-letter-web/js-build/: index.js  webpack.config.js
light-letter-web/src/: lib.rs  not_found.rs  routing.rs  theme.rs
light-letter-web/src/backstage/: login.rs  mod.rs
light-letter-web/src/components/: button.rs  mod.rs  skin.rs
light-letter-web/src/request/: mod.rs
light-letter/examples/basic/: config.toml
light-letter/examples/basic/sites/local-1/files/html/: index.html
light-letter/examples/basic/sites/local-2/static/: index.html
light-letter/migrations/1_create_posts/: up.sql
light-letter/src/: lib.rs  schema.rs  sites_config.rs  themes.rs
light-letter/src/http/: blog.rs  error.rs  mod.rs  res_utils.rs  resource.rs
light-letter/src/rpc/: mod.rs
light-letter/src/static/: .gitignore
light-letter/tests/: basic.rs
migrations/1_create_posts/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  sites_config.rs
src/blog/: mod.rs
src/blog/backstage/: login.rs
src/db/: mod.rs
src/http/: mod.rs
tests/: basic.rs
