[package]
name = "light-letter-backstage"
version = "0.3.0"
authors = ["LastLeaf <bqfu@163.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["lang-en_US"]
lang-en_US = []

[dependencies]
maomi = { version = "0.3", path = "../../maomi/maomi" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "0.1"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.6"
sha2 = "0.8"
light-letter-rpc = { version = "0.3", path = "../light-letter-rpc" }
light-letter-web = { version = "0.3", path = "../light-letter-web" }
light-letter-i18n = { version = "0.3", path = "../light-letter-i18n" }

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "Location",
  "History",
  "EventTarget",
]
