[package]
name = "light-letter-rpc"
version = "0.2.0"
authors = ["LastLeaf <bqfu@163.com>"]
edition = "2018"

[lib]
name = "light_letter_rpc"
path = "src/lib.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
log = "0.4"
lazy_static = "1.0"
sha2 = "0.8"
regex = "1.2"
validator = "0.10"
validator_derive = "0.10"
rand = "0.7"
uuid = { version = "0.8", features = ["v4"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "0.2", features = ["full"] }
diesel = { version = "1.4", features = ["postgres", "uuid", "r2d2"] }
diesel_migrations = "1.4"
diesel_derives = "1.4"
chrono = "0.4"
toml = "0.5"
futures = "0.3"
url = "2.1"
fs_extra = "1.1"

[dev-dependencies]
tempdir = "0.3"
