[package]
name = "light-letter-web"
version = "0.1.0"
authors = ["LastLeaf <bqfu@163.com>"]
edition = "2018"

[lib]
name = "light_letter_web"
crate-type = ["cdylib", "rlib"]

[dependencies]
maomi = { version = "=0.1.0", path = "../../maomi/maomi" }
wasm-bindgen = "0.2"
console_log = "0.1"
futures = "0.3"
base64 = "0.11"
