[package]
name = "light-letter-web"
version = "0.2.0"
authors = ["LastLeaf <bqfu@163.com>"]
edition = "2018"

[lib]
name = "light_letter_web"
crate-type = ["cdylib", "rlib"]

[dependencies]
maomi = { version = "=0.2.0", path = "../../maomi/maomi" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "0.1"
futures = "0.3"
base64 = "0.11"
serde = "1.0"
serde_urlencoded = "0.6"
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "History"
]
