[package]
name = "light-letter-web"
version = "0.2.0"
authors = ["LastLeaf <bqfu@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maomi = { version = "=0.2.0", path = "../../maomi/maomi" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures = "0.3"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4.0"
base64 = "0.11"

[dependencies.web-sys]
version = "0.3"
features = [
  "XmlHttpRequest",
]
