[package]
name = "light-letter"
version = "0.2.0"
authors = ["LastLeaf <bqfu@163.com>"]
edition = "2018"

[lib]
name = "light_letter"
path = "src/lib.rs"

[[bin]]
name = "light-letter"
path = "src/main.rs"

[dependencies]
http = "0.2"
hyper = { version = "0.13", features = ["stream"] }
tokio = { version = "0.2", features = ["full"] }
bytes = "0.5"
flate2 = { version = "1.0", features = ["tokio"] }
mime_guess = "2.0"
chrono = "0.4"
futures = "0.3"
serde = "1.0"
fs_extra = "1.1"
failure = "0.1"
regex = "1.2"
lazy_static = "1.0"
log = "0.4"
env_logger = "0.6"
base64 = "0.11"
rand = "0.7"
maomi = { version = "=0.2.0", path = "../../maomi/maomi" }
light-letter-rpc = { version = "=0.2.0", path = "../light-letter-rpc" }
light-letter-web = { version = "=0.2.0", path = "../light-letter-web" }

[dev-dependencies]
tempdir = "0.3"

[dependencies.light-letter-theme-ivy-leaf]
version = "=0.2.0"
path = "../light-letter-theme-ivy-leaf"
